<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.eirinimitsopoulou.popularmovies.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout

            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageHeight"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/m_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/m_posterimage"
                        android:layout_width="@dimen/posterWidth"
                        android:layout_height="@dimen/posterHeight"
                        android:layout_marginTop="@dimen/margin_xlarge"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_marginTop="@dimen/margin_xxlarge"
                            android:text="@string/release_date"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/m_releasedate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/text_medium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_marginTop="@dimen/margin_xxlarge"
                            android:text="@string/user_rating"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/m_voteaverage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/text_medium" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/summary"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/m_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="@dimen/margin_medium"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/trailers"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/m_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/reviews"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/m_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_star_border"
        app:backgroundTint="@color/starColor"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
