<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/m_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/m_poster2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_poster" />

        <TextView
            android:id="@+id/m_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="12dp"
            android:scrollHorizontally="false"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/m_poster2"
            app:layout_constraintTop_toBottomOf="@+id/m_poster"
            tools:text="Title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/user_rating"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/m_poster2"
            app:layout_constraintTop_toBottomOf="@+id/m_title" />


        <TextView
            android:id="@+id/m_vote_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="120dp"
            android:paddingTop="@dimen/padding_top"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/m_poster2"
            app:layout_constraintTop_toBottomOf="@+id/m_title"
            tools:text="7.1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:paddingTop="@dimen/padding_top2"
            android:text="@string/release_date"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/m_poster2"
            app:layout_constraintTop_toBottomOf="@+id/m_vote_average" />

        <TextView
            android:id="@+id/m_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="130dp"
            android:paddingTop="@dimen/padding_top2"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/m_poster2"
            app:layout_constraintTop_toBottomOf="@+id/m_vote_average"
            tools:text="06-11-1995" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="@dimen/text_margin"
            android:text="@string/summary"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_release_date" />

        <TextView
            android:id="@+id/m_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>